--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "type": "typo3-cms-extension",
   "require": {
     "php": ">=7.0.0",
-    "typo3/cms-core": "^8.7.0 || ^9.1"
+    "typo3/cms-core": "^8.7.0 || ^9.1 || ^10.4"
   },
   "require-dev": {
     "typo3/testing-framework": "^2.0"
