--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,11 @@
   "name": "netlogix/nxajaxpluginpage",
   "type": "typo3-cms-extension",
   "require": {
-    "php": ">=7.0.0",
-    "typo3/cms-core": "^8.7.0 || ^9.1 || ^10.4"
+    "php": "^7.2",
+    "typo3/cms-core": "^10.4"
   },
   "require-dev": {
-    "typo3/testing-framework": "^2.0"
+    "typo3/testing-framework": "^6.0"
   },
   "autoload": {
     "psr-4": {
@@ -22,5 +22,8 @@
     "nxajaxpluginpage": "self.version"
   },
   "extra": {
+    "typo3/cms": {
+      "extension-key": "nxajaxpluginpage"
+    }
   }
 }
