FEATURE: Add github ci based tests

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
     "typo3/cms-core": "^10.4"
   },
   "require-dev": {
-    "typo3/testing-framework": "^6.0"
+    "ext-sqlite3": "*",
+    "nimut/testing-framework": "^6.0",
+    "nimut/phpunit-merger": "^1.1",
+    "phpunit/phpcov": "^8.2"
   },
   "autoload": {
     "psr-4": {
@@ -18,12 +21,28 @@
       "Netlogix\\Nxajaxpluginpage\\Tests\\": "Tests"
     }
   },
-  "replace": {
-    "nxajaxpluginpage": "self.version"
-  },
   "extra": {
     "typo3/cms": {
-      "extension-key": "nxajaxpluginpage"
+      "extension-key": "nxajaxpluginpage",
+      "web-dir": ".Build/Web",
+      "cms-package-dir": "{$vendor-dir}/typo3/cms"
     }
+  },
+  "config": {
+    "vendor-dir": ".Build/vendor",
+    "bin-dir": ".Build/bin",
+    "allow-plugins": {
+      "typo3/class-alias-loader": true,
+      "typo3/cms-composer-installers": true
+    }
+  },
+  "scripts": {
+    "post-autoload-dump": [
+      "@prepare-extension-test-structure",
+      "mkdir -p .Build/logs/"
+    ],
+    "prepare-extension-test-structure": [
+      "Nimut\\TestingFramework\\Composer\\ExtensionTestEnvironment::prepare"
+    ]
   }
 }
