--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "netlogix/nxajaxpluginpage",
   "type": "typo3-cms-extension",
+  "license": "MIT",
   "require": {
     "php": "^7.4",
     "typo3/cms-core": "^10.4"
