--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
   "type": "typo3-cms-extension",
   "license": "MIT",
   "require": {
-    "php": "^7.4",
-    "typo3/cms-core": "^10.4"
+    "php": "^7.4 || ^8.1",
+    "typo3/cms-core": "^10.4 || ^11.5"
   },
   "require-dev": {
     "ext-sqlite3": "*",
