--- a/composer.json
+++ b/composer.json
@@ -1,50 +1,55 @@
 {
-  "name": "netlogix/nxajaxpluginpage",
-  "description": "Render AJAX plugins based on ACCEPT headers",
-  "type": "typo3-cms-extension",
-  "license": "MIT",
-  "require": {
-    "php": "^7.4 || ^8.0",
-    "typo3/cms-core": "^10.4 || ^11.5 || ^12.4"
-  },
-  "require-dev": {
-    "ext-sqlite3": "*",
-    "nimut/testing-framework": "^6.0",
-    "nimut/phpunit-merger": "^1.1",
-    "phpunit/phpcov": "^8.2"
-  },
-  "autoload": {
-    "psr-4": {
-      "Netlogix\\Nxajaxpluginpage\\": "Classes"
+    "name": "netlogix/nxajaxpluginpage",
+    "description": "Render AJAX plugins based on ACCEPT headers",
+    "license": "MIT",
+    "type": "typo3-cms-extension",
+    "require": {
+        "typo3/cms-core": "^13.4"
+    },
+    "require-dev": {
+        "ext-sqlite3": "*",
+        "ergebnis/composer-normalize": "^2.45",
+        "phpunit/phpcov": "^10.0",
+        "ssch/typo3-rector": "^3.0",
+        "typo3/testing-framework": "^9.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Netlogix\\Nxajaxpluginpage\\": "Classes"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Netlogix\\Nxajaxpluginpage\\Tests\\": "Tests"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "ergebnis/composer-normalize": true,
+            "typo3/class-alias-loader": true,
+            "typo3/cms-composer-installers": true
+        },
+        "bin-dir": ".Build/bin",
+        "vendor-dir": ".Build/vendor"
+    },
+    "extra": {
+        "typo3/cms": {
+            "app-dir": ".Build",
+            "extension-key": "nxajaxpluginpage",
+            "web-dir": ".Build/Web"
+        }
+    },
+    "scripts": {
+        "post-autoload-dump": [
+            "@prepare-extension-test-structure"
+        ],
+        "composer:normalize": "@composer normalize --no-check-lock --dry-run",
+        "composer:normalize:fix": "@composer normalize --no-check-lock",
+        "composer:psr-verify": "@composer dumpautoload --optimize --strict-psr --no-plugins",
+        "php:lint": "find Classes -name '*.php' -print0 | xargs -r -0 -n 1 -P 4 php -l",
+        "rector": "rector process --dry-run",
+        "rector:fix": "rector process",
+        "test:functional": "phpunit -c phpunit_functional.xml",
+        "test:unit": "phpunit -c phpunit.xml"
     }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "Netlogix\\Nxajaxpluginpage\\Tests\\": "Tests"
-    }
-  },
-  "extra": {
-    "typo3/cms": {
-      "extension-key": "nxajaxpluginpage",
-      "web-dir": ".Build/public",
-      "cms-package-dir": "{$vendor-dir}/typo3/cms"
-    }
-  },
-  "config": {
-    "vendor-dir": ".Build/vendor",
-    "bin-dir": ".Build/bin",
-    "allow-plugins": {
-      "typo3/class-alias-loader": true,
-      "typo3/cms-composer-installers": true
-    }
-  },
-  "scripts": {
-    "post-autoload-dump": [
-      "@prepare-extension-test-structure",
-      "mkdir -p .Build/logs/"
-    ],
-    "prepare-extension-test-structure": [
-      "Nimut\\TestingFramework\\Composer\\ExtensionTestEnvironment::prepare"
-    ]
-  }
 }
